--- a/project/app_client/index.html
+++ b/project/app_client/index.html
@@ -21,6 +21,11 @@
     <script src="bower/angular-route/angular-route.js"></script>
     <script src="bower/angular-resource/angular-resource.js"></script>
     <script src="app.js"></script>
-    <ng-include src="'partials/scripts.html'"></ng-include>
+    <script src="controllers/register.js"></script>
+    <script src="services/userResource.js"></script>
+    <script src="services/postResource.js"></script>
+    <script src="bower/jquery/dist/jquery.js"></script>
+    <script src="bower/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="static/action.js"></script>
   </body>
 </html>
