Add login feature
Add authentication service, add passport dependency

--- a/project/app_client/index.html
+++ b/project/app_client/index.html
@@ -22,8 +22,11 @@
     <script src="bower/angular-resource/angular-resource.js"></script>
     <script src="app.js"></script>
     <script src="controllers/register.js"></script>
+    <script src="controllers/login.js"></script>
+    <script src="controllers/nav.js"></script>
     <script src="services/userResource.js"></script>
     <script src="services/postResource.js"></script>
+    <script src="services/authentication.js"></script>
     <script src="bower/jquery/dist/jquery.js"></script>
     <script src="bower/bootstrap/dist/js/bootstrap.js"></script>
     <script src="static/action.js"></script>
