--- a/project/app_client/index.html
+++ b/project/app_client/index.html
@@ -20,6 +20,8 @@
     <script src="bower/angular/angular.js"></script>
     <script src="bower/angular-route/angular-route.js"></script>
     <script src="bower/angular-resource/angular-resource.js"></script>
+    <script src="bower/ng-file-upload/ng-file-upload-shim.min.js"></script>
+    <script src="bower/ng-file-upload/ng-file-upload.min.js"></script>
     <script src="app.js"></script>
     <script src="controllers/register.js"></script>
     <script src="controllers/login.js"></script>
