--- a/project/app_client/index.html
+++ b/project/app_client/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!--Bootstrap-->
     <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap.css" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
   </head>
   <body>
     <ng-include src="'partials/nav.html'"></ng-include>
@@ -25,12 +25,13 @@
     <script src="app.js"></script>
     <script src="controllers/register.js"></script>
     <script src="controllers/login.js"></script>
+    <script src="controllers/profile.js"></script>
     <script src="controllers/nav.js"></script>
     <script src="services/userResource.js"></script>
     <script src="services/postResource.js"></script>
     <script src="services/authentication.js"></script>
     <script src="bower/jquery/dist/jquery.js"></script>
     <script src="bower/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="static/action.js"></script>
+    <script src="static/scripts/action.js"></script>
   </body>
 </html>
