--- a/project/app_client/index.html
+++ b/project/app_client/index.html
@@ -29,6 +29,7 @@
     <script src="controllers/register.js"></script>
     <script src="controllers/login.js"></script>
     <script src="controllers/profile.js"></script>
+    <script src="controllers/post.js"></script>
     <script src="controllers/nav.js"></script>
     <script src="services/userResource.js"></script>
     <script src="services/postResource.js"></script>
