Update post page design

--- a/project/app_client/index.html
+++ b/project/app_client/index.html
@@ -9,6 +9,7 @@
     <!--Bootstrap-->
     <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap.css" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="static/css/post.css">
   </head>
   <body>
     <ng-include src="'partials/nav.html'"></ng-include>
