Implement like/unlike and delete post, follow/unfollow a user

--- a/project/app_client/index.html
+++ b/project/app_client/index.html
@@ -34,6 +34,9 @@
     <script src="controllers/nav.js"></script>
     <script src="services/userResource.js"></script>
     <script src="services/postResource.js"></script>
+    <script src="services/followResource.js"></script>
+    <script src="services/likeResource.js"></script>
+    <script src="services/commentResource.js"></script>
     <script src="services/authentication.js"></script>
   </body>
 </html>
