--- a/project/app_client/index.html
+++ b/project/app_client/index.html
@@ -31,7 +31,10 @@
     <script src="controllers/login.js"></script>
     <script src="controllers/profile.js"></script>
     <script src="controllers/post.js"></script>
+    <script src="controllers/account.js"></script>
     <script src="controllers/nav.js"></script>
+    <script src="controllers/auth.js"></script>
+    <script src="controllers/home.js"></script>
     <script src="services/userResource.js"></script>
     <script src="services/postResource.js"></script>
     <script src="services/followResource.js"></script>
