--- a/Projects/src/index.html
+++ b/Projects/src/index.html
@@ -8,13 +8,15 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>SmartToys</title>
+   <link rel="shortcut icon" href="st.ico" />
   <!-- Bootstrap Core CSS -->
   <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
   <link href="main.css" rel="stylesheet">
-
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+	
 </head>
 
 <body>
