--- a/Proyek - Theo/Aum.html
+++ b/Proyek - Theo/Aum.html
@@ -11,9 +11,13 @@
 	  <script src="react-dom.js"></script>
 	  <script src="babel-cli.js"></script>
 		<script src="moment.js"></script>
+    <script src="jquery-3.1.0.js"></script>
+    <script src="bootstrap.js"></script>
 
 		<script type="text/babel" src="Aum.js"></script>
-		<div id="theo">Kalau tulisan ini terlihat, maka gagal</div>
+		<div class="container">
+			<div id="theo">Kalau tulisan ini terlihat, maka gagal</div>
+		</div>
 
 	</body>
 
