--- a/project/app_client/index.html
+++ b/project/app_client/index.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <!--Google MDL-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!--Bootstrap-->
     <link rel="stylesheet" href="bower/bootstrap/dist/css/bootstrap.css" crossorigin="anonymous">
     <link rel="stylesheet" href="static/css/style.css">
@@ -18,8 +20,11 @@
 
     </ng-view>
     <ng-include src="'partials/footer.html'"></ng-include>
+
     <!--Scripts-->
     <script src="bower/jquery/dist/jquery.js"></script>
+    <script src="bower/jquery-ui/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
     <script src="bower/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower/angular/angular.js"></script>
     <script src="bower/angular-route/angular-route.js"></script>
@@ -27,6 +32,7 @@
     <script src="bower/angular-resource/angular-resource.js"></script>
     <script src="bower/ng-file-upload/ng-file-upload-shim.min.js"></script>
     <script src="bower/ng-file-upload/ng-file-upload.min.js"></script>
+    <script src="bower/angular-sanitize/angular-sanitize.js"></script>
     <script src="app.js"></script>
     <script src="controllers/register.js"></script>
     <script src="controllers/login.js"></script>
@@ -36,6 +42,7 @@
     <script src="controllers/nav.js"></script>
     <script src="controllers/auth.js"></script>
     <script src="controllers/home.js"></script>
+    <script src="controllers/search.js"></script>
     <script src="directives/username.js"></script>
     <script src="directives/emailCheck.js"></script>
     <script src="services/userResource.js"></script>
@@ -45,5 +52,7 @@
     <script src="services/commentResource.js"></script>
     <script src="services/authentication.js"></script>
     <script src="services/checkDuplicate.js"></script>
+    <script src="services/dateFormat.js"></script>
+    <script defer src="https://code.getmdl.io/1.2.0/material.min.js"></script>
   </body>
 </html>
